unleash/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unleash
  namespace: unleash
spec:
  selector:
    app: unleash
  ports:
    - port: 4242
      targetPort: 4242
