unleash/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unleash
  namespace: unleash
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - unleash.dubrovskih.ru
      secretName: unleash-tls
  rules:
    - host: unleash.dubrovskih.ru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unleash
                port:
                  number: 4242
